--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "coffeeify": "^1.1.0",
     "ejs": "^2.3.3",
     "express": "^4.12.4",
+    "jquery": "^2.1.4",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
