--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Solve sudoku puzzles",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon -e js,html",
     "start": "node ./server.js"
   },
   "author": "Kevin Hughes",
@@ -12,14 +11,14 @@
   "homepage": "https://github.com/KevinPHughes/SudokuSolver",
   "dependencies": {
     "angular": "^1.4.1",
-    "browserify-middleware": "^6.0.0",
-    "coffeeify": "^1.1.0",
     "ejs": "^2.3.3",
     "express": "^4.12.4",
     "jquery": "^2.1.4",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "gulp-browserify": "^0.5.1",
+    "gulp-rename": "^1.2.2",
     "nodemon": "^1.3.7"
   }
 }
