--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "angular": "^1.4.1",
     "ejs": "^2.3.3",
     "express": "^4.12.4",
-    "jquery": "^2.1.4",
+    "jquery": "3.3.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
